fixed layout issues

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -139,6 +139,7 @@ header {
   margin: 0px auto;
   position: absolute;
   left: 5%;
+  z-index: 100;
 
   .suggestion-panel {
     width: 100%;
@@ -173,6 +174,11 @@ header {
       height: 1px;
       background: hsl(207, 10%, 82%);
     }
+  }
+}
+@media only screen and (min-width: 376px) {
+  .suggestions {
+    max-width: 475px;
   }
 }
 
